--- a/dashboard/templates/dashboard/map.html
+++ b/dashboard/templates/dashboard/map.html
@@ -3,16 +3,18 @@
 
 
 <style>
-      #map {
-        height: 550px;
+    #map {
+        height: 600px;
         width: 100%;
-       }
+    }
+    html, body {
+        height: 100%;
+        margin: 0;
+        padding: 0;
+    }
 </style>
 
 <body>
-<div class="card mt-3 mb-3">
-    <input type="hidden" id="hiddenCurrent" value="{{ current }}">
-    <h3 class="ml-2 mb-0">Dashboard<small class="float-right mt-1 mr-2"></small></h3>
     <!--The div element for the map -->
     <div id="map"></div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
@@ -57,8 +59,90 @@
             }
 
             var libertyStatue = {lat: 40.689229, lng: -74.044522};
-            var map = new google.maps.Map(
-                document.getElementById('map'), {zoom: 4, center: libertyStatue});
+            var map = new google.maps.Map(document.getElementById('map'), {
+                center: {lat: 40.674, lng: -73.945},
+                zoom: 12,
+                styles: [
+                    {elementType: 'geometry', stylers: [{color: '#242f3e'}]},
+                    {elementType: 'labels.text.stroke', stylers: [{color: '#242f3e'}]},
+                    {elementType: 'labels.text.fill', stylers: [{color: '#746855'}]},
+                    {
+                        featureType: 'administrative.locality',
+                        elementType: 'labels.text.fill',
+                        stylers: [{color: '#d59563'}]
+                    },
+                    {
+                        featureType: 'poi',
+                        elementType: 'labels.text.fill',
+                        stylers: [{color: '#d59563'}]
+                    },
+                    {
+                        featureType: 'poi.park',
+                        elementType: 'geometry',
+                        stylers: [{color: '#263c3f'}]
+                    },
+                    {
+                        featureType: 'poi.park',
+                        elementType: 'labels.text.fill',
+                        stylers: [{color: '#6b9a76'}]
+                    },
+                    {
+                        featureType: 'road',
+                        elementType: 'geometry',
+                        stylers: [{color: '#38414e'}]
+                    },
+                    {
+                        featureType: 'road',
+                        elementType: 'geometry.stroke',
+                        stylers: [{color: '#212a37'}]
+                    },
+                    {
+                        featureType: 'road',
+                        elementType: 'labels.text.fill',
+                        stylers: [{color: '#9ca5b3'}]
+                    },
+                    {
+                        featureType: 'road.highway',
+                        elementType: 'geometry',
+                        stylers: [{color: '#746855'}]
+                    },
+                    {
+                        featureType: 'road.highway',
+                        elementType: 'geometry.stroke',
+                        stylers: [{color: '#1f2835'}]
+                    },
+                    {
+                        featureType: 'road.highway',
+                        elementType: 'labels.text.fill',
+                        stylers: [{color: '#f3d19c'}]
+                    },
+                    {
+                        featureType: 'transit',
+                        elementType: 'geometry',
+                        stylers: [{color: '#2f3948'}]
+                    },
+                    {
+                        featureType: 'transit.station',
+                        elementType: 'labels.text.fill',
+                        stylers: [{color: '#d59563'}]
+                    },
+                    {
+                        featureType: 'water',
+                        elementType: 'geometry',
+                        stylers: [{color: '#17263c'}]
+                    },
+                    {
+                        featureType: 'water',
+                        elementType: 'labels.text.fill',
+                        stylers: [{color: '#515c6d'}]
+                    },
+                    {
+                        featureType: 'water',
+                        elementType: 'labels.text.stroke',
+                        stylers: [{color: '#17263c'}]
+                    }
+                ]
+            });
             var marker = new google.maps.Marker({position: libertyStatue, map: map});
         }
 
@@ -76,9 +160,6 @@
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB4sTgn7NnorM15ZXwgJEZ9_p5ew_2VEwg&callback=initMap">
     </script>
     -->
-
-    </div>
-</div>
 
 </body>
 {% endblock %}
