--- a/dashboard/templates/base.html
+++ b/dashboard/templates/base.html
@@ -38,7 +38,7 @@
     <script src="{% static 'js/creative.min.js' %}"></script>
 
     <!-- Map JavaScript -->
-    <script src="{% static 'javascript/map.js' %}"></script>
+    <script src="{% static 'js/map.js' %}"></script>
 
 </body>
 
