--- a/dashboard/templates/dashboard/map.html
+++ b/dashboard/templates/dashboard/map.html
@@ -1,6 +1,12 @@
 {% extends "dashboard/navigationbar.html" %}
 {% block body_content %}
 
+    <header>
+
+        <title>Dashboard | servaMap</title>
+
+    </header>
+
 <style>
     #map {
         height: 600px;
