--- a/users/templates/login.html
+++ b/users/templates/login.html
@@ -1,6 +1,12 @@
 {% extends "base.html" %}
 {% block content %}
 
+    <header>
+
+        <title>Logging In | servaMap</title>
+
+    </header>
+
     <body style="background-color:white;">
 
     {% load crispy_forms_tags %}
