--- a/users/templates/register.html
+++ b/users/templates/register.html
@@ -1,5 +1,10 @@
 {% extends "base.html" %}
 {% block content %}
+    <header>
+
+        <title>Registration | servaMap</title>
+
+    </header>
 
     <body style="background-color:white;">
 
