--- a/dashboard/templates/dashboard/navigationbar.html
+++ b/dashboard/templates/dashboard/navigationbar.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark py-3" id="dashboard_navbar">
         <div class="container">
             <a class="navbar-brand js-scroll-trigger" href="/">servaMap</a>
             <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
