--- a/users/templates/mainpage.html
+++ b/users/templates/mainpage.html
@@ -25,6 +25,7 @@
 <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
     <div class="container">
         <a class="navbar-brand js-scroll-trigger" href="{% url 'login' %}">Login</a>
+        <a class="navbar-brand js-scroll-trigger" href="{% url 'register' %}">Register</a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -40,14 +41,37 @@
 
 <!-- Header -->
 <header class="masthead">
-    <div class="container h-100">
-        <div class="row h-100 align-items-center justify-content-center text-center">
-            <div class="col-lg-10 align-self-end">
-                <h1 class="text-black font-weight-bold">servaMap</h1>
-                <hr class="divider my-4">
+    <div class="row">
+        <div class="container h-100">
+            <div class="row h-100 align-items-center justify-content-center text-center">
+                <div class="col-lg-10 align-self-end">
+                    <h1 class="text-black font-weight-bold">servaMap</h1>
+                    <hr class="divider my-4">
+                </div>
             </div>
-            <div class="col-lg-8 align-self-baseline">
-                <p class="text-uppercase text-black font-weight-light mb-5">Help your neighbors!</p>
+        </div>
+
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-lg-8 text-center">
+                    <h3 class="text-uppercase text-black font-weight-bold">Do you need help or want to offer help?</h3>
+                    <p class="text-uppercase text-black font-weight-light">Get started below!</p>
+                    <h2 class="text-uppercase text-black font-weight-bold">I'm a</h2>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-4 mr-auto text-center mb-5 mb-lg-0">
+                    <i class="fas fa-user fa-3x mb-3 text-muted"></i>
+                    <div><a class="btn btn-primary" href="{% url 'register' %}">REGULAR USER</a></div>
+                </div>
+                <div class="col-lg-4 mr-auto text-center">
+                    <i class="fas fa-thermometer-three-quarters fa-3x mb-3 text-muted"></i>
+                    <div><a class="btn btn-primary" href="{% url 'register' %}">COVID-19 PATIENT</a></div>
+                </div>
+                <div class="col-lg-4 mr-auto text-center">
+                    <i class="fas fa-clinic-medical fa-3x mb-3 text-muted"></i>
+                    <div><a class="btn btn-primary" href="{% url 'register' %}">MEDICAL PERSONNEL</a></div>
+                </div>
             </div>
         </div>
     </div>
