--- a/users/templates/mainpage.html
+++ b/users/templates/mainpage.html
@@ -82,62 +82,62 @@
       <div class="container">
         <div class="row mb-5 justify-content-center text-center"  data-aos="fade-up">
           <div class="col-7 text-center  mb-5">
-            <h2 class="section-title">Our Team</h2>
+            <h3 class="section-title">Our Team</h3>
             <p class="lead">We are smart and talented students!</p>
           </div>
         </div>
 
         <div class="row">
 
-          <div class="col-lg-4 col-md-6 mb-4" data-aos="fade-up" data-aos-delay="150">
+          <div class="col-lg-3 col-md-4 mb-3" data-aos="fade-up" data-aos-delay="150">
             <div class="person">
               <div class="bio-img">
                 <figure>
-                  <img src="http://clipart-library.com/images_k/stick-person-transparent-background/stick-person-transparent-background-22.png" alt="Image" class="img-fluid">
+                  <img src="/static/img/jae.jpg" alt="Image" width = 250px; height=150px; class="img-fluid">
                 </figure>
               </div>
-              <h2 class="text-black h1">Jae Park</h2>
-              <span class="sub-title d-block mb-3">Student Developer</span>
-              <p>I'm cool.</p>
+              <h5 class="text-black h5">Jae Park</h5>
+              <span class="sub-title d-block mb-3">Rensselaer Polytechnic Institute'21</span>
+              <p>Computer Science major, Math minor</p>
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 mb-4" data-aos="fade-up" data-aos-delay="250">
+          <div class="col-lg-3 col-md-4 mb-3" data-aos="fade-up" data-aos-delay="250">
             <div class="person">
               <div class="bio-img">
                 <figure>
-                  <img src="http://clipart-library.com/images_k/stick-person-transparent-background/stick-person-transparent-background-22.png" alt="Image" class="img-fluid">
+                  <img src="/static/img/servaMap.PNG" alt="Image" width = 250px; height=150px; class="img-fluid">
                 </figure>
               </div>
-              <h2 class="text-black h1">Sanjana Surapaneni</h2>
-              <span class="sub-title d-block mb-3">Student Developer</span>
-                <p>I'm cool.</p>
+              <h5 class="text-black h5">Sanjana Surapaneni</h5>
+              <span class="sub-title d-block mb-3">Rensselaer Polytechnic Institute'22</span>
+                <p>Computer Science, ITWS dual major</p>
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 mb-4" data-aos="fade-up" data-aos-delay="100">
+          <div class="col-lg-3 col-md-4 mb-3" data-aos="fade-up" data-aos-delay="100">
             <div class="person">
               <div class="bio-img">
                 <figure>
-                  <img src="http://clipart-library.com/images_k/stick-person-transparent-background/stick-person-transparent-background-22.png" alt="Image" class="img-fluid">
+                  <img src="/static/img/lisa.jpg" alt="Image" width = 250px; height=150px; class="img-fluid">
                 </figure>
               </div>
-              <h2 class="text-black h1">Lisa Chirayath</h2>
-              <span class="sub-title d-block mb-3">Student Developer</span>
-                <p>I'm cool.</p>
+              <h5 class="text-black h5">Lisa Chirayath</h5>
+              <span class="sub-title d-block mb-3">University of Houston'22</span>
+                <p>Management Information Systems major, Data Science minor</p>
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 mb-4" data-aos="fade-up">
+          <div class="col-lg-3 col-md-4 mb-3" data-aos="fade-up">
             <div class="person">
               <div class="bio-img">
                 <figure>
-                  <img src="http://clipart-library.com/images_k/stick-person-transparent-background/stick-person-transparent-background-22.png" alt="Image" class="img-fluid">
+                  <img src="/static/img/phyo.jpeg" alt="Image" width = 250px; height=150px; class="img-fluid">
                 </figure>
               </div>
-              <h2 class="text-black h1">Phyo Thuta Aung</h2>
-              <span class="sub-title d-block mb-3">Student Developer</span>
-                <p>I'm cool.</p>
+              <h5 class="text-black h5">Phyo Thuta Aung</h5>
+              <span class="sub-title d-block mb-3">Franklin & Marshall College'21</span>
+                <p>Computer Science major, Applied Math minor</p>
             </div>
           </div>
             </div>
@@ -158,11 +158,11 @@
         <div class="row">
             <div class="col-lg-4 ml-auto text-center mb-5 mb-lg-0">
                 <i class="fas fa-phone fa-3x mb-3 text-muted"></i>
-                <div>(+1)717-203-9582</div>
+                <div>(+1)797-283-9682</div>
             </div>
             <div class="col-lg-4 mr-auto text-center">
                 <i class="fas fa-envelope fa-3x mb-3 text-muted"></i>
-                <a class="d-block" href="mailto:paung@fandm.edu">paung@fandm.edu</a>
+                <a class="d-block" href="mailto:help@servamap.edu">help@servamap.com</a>
             </div>
         </div>
     </div>
